<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_game_popup"
    android:layout_width="300dp"
    android:layout_height="500dp"
    android:background="@drawable/layout_rounded"
    android:fadingEdge="horizontal|vertical"
    app:layoutDescription="@xml/new_game_popup_scene">

    <LinearLayout
        android:id="@+id/newGameLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:text="@string/new_game"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameGameField"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/game_name_prompt_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/maxPlayerCountField"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/game_max_players_prompt_text"
            android:inputType="number" />

        <EditText
            android:id="@+id/newGameNumCoins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/newGameNumCoinsText"
            android:inputType="number" />

        <EditText
            android:id="@+id/newGameDuration"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/newGameDurationText"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/newGameRadius"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/newGameRadiusText"
            android:inputType="numberDecimal" />


        <Button
            android:id="@+id/newGameSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_game_text" />


    </LinearLayout>

</RelativeLayout>