<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/join_popup"
    android:layout_width="300dp"
    android:layout_height="450dp"
    android:background="@drawable/layout_rounded"
    android:fadingEdge="horizontal|vertical">

    <EditText
        android:id="@+id/join_game_text_filter"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:autofillHints="@string/join_game_filter_message"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/join_game_filter_message"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/join_game_button_filter"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/layout_rounded"
        android:text="@string/join_game_filter_button"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/open_games"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/openGamesLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

    </ScrollView>

</RelativeLayout>