<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_button"

            android:icon="@drawable/ic_baseline_person_register"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/friend_list_button"
            android:icon="@drawable/baseline_supervisor_account_24"
            android:title="@string/friend_list_button_text" />
        <item
            android:id="@+id/main_leaderboard_button"
            android:icon="@drawable/ic_baseline_leaderboard"
            android:title="@string/menu_main_leaderboard_button_text" />

        <item
            android:id="@+id/download_map"
            android:icon="@drawable/ic_download"
            android:title="@string/download_map" />

        <item
            android:id="@+id/log_out_button"
            android:icon="@drawable/ic_baseline_close_app"
            android:title="@string/log_out" />


    </group>
</menu>